2005-03-03  Nate Nielsen <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.glade: Fix typo and screwed up description
    of insecure passphrases stored in memory 
    
2005-02-15  Nate Nielsen <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: Fix tag problem 
    * src/seahorse-key-manager.glade: Fix warnings about events
	
2005-02-14  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-signer.glade: Added missing files from 
    yesterday's 'Prompt for signer' checkin. 
    
2005-02-13  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-libdialogs.h:
    * plugins/gedit/seahorse-gedit.c:
    * src/main.c:
    * src/seahorse-revoke.c: Prompt for signer when no default 
    key is selected.
    * agent/seahorse-agent-cache.c: Display key UID properly in 
    agent window. Open file descriptors in agent daemon so that 
    GPGME works. (bug #159629)
    * configure.in: Allow use with GPG 1.4 (bug #161697)
    
2005-02-10  Nate Nielsen <nielsen@memberwebs.com>

    * HACKING: Added notes and list of non GPGME features we're
    using.
    
2005-02-09  Nate Nielsen <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: 
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-key-pair.c:
    * libseahorse/seahorse-key-pair.h:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-recipients.c:
    * libseahorse/seahorse-recipients.glade:
    * plugins/nautilus/seahorse-gedit.c: 
    * src/main.c: Support for choice of signing key, proper control for 
    signing key selection (Fixes #157333, #111885)
    
2005-02-06  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-source.c: Fixed problem where key 