@@ -2,7 +2,11 @@
 
     * agent/seahorse-agent-cache.glade: Fix typo and screwed up description
     of insecure passphrases stored in memory 
-    
+	* agent/seahorse-agent-actions.c:
+	* agent/seahorse-agent-prompt.c:
+	* libseahorse/seahorse-prefs-cache.c: Changed usage of 'password' to 
+	'passphrase' in user visible text.
+
 2005-02-15  Nate Nielsen <nielsen@memberwebs.com>
 
     * data/seahorse.schemas.in: Fix tag problem 
